--- a/README.org
+++ b/README.org
@@ -3,3 +3,6 @@
 future reading
 https://hadean.com/blog/managing-rust-dependencies-with-nix-part-i/
 https://caballerocoll.com/blog/bevy-rhythm-game/ i rly wanted to use this ; _ ;
+
+
+decent impl reference?: https://github.com/browserdotsys/vecchio
